--- a/app/Resources/views/default/register.html.twig
+++ b/app/Resources/views/default/register.html.twig
@@ -1,10 +1,27 @@
 {% extends "account.html.twig" %}
 
+{% form_theme form _self %}
+
+{% block password_widget %}
+    {% set type = type|default('password') %}
+    {{ block('register_password') }}
+{% endblock %}
+
+{% block register_password %}
+    <div class="form-group">
+        <label class="col-md-4 control-label" for="username">{{ label }}</label>
+        <div class="col-md-6">
+            <input type="password" {{ block('widget_attributes') }} />
+        </div>
+    </div>
+    {#{{ form_row(form.plainPassword) }}#}
+{% endblock %}
+
 {% block body %}
     <div class="container">
         <div class="col-md-8 col-md-offset-2 account-panel">
             <div class="panel panel-default">
-                <div class="panel-heading">{{ 'Login to account'|trans({}, 'FOSUserBundle') }}</div>
+                <div class="panel-heading">{{ 'Registration'|trans({}, 'FOSUserBundle') }}</div>
                 <div class="panel-body">
                     <form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST" class="fos_user_registration_register">
                         {#{{ form_widget(form) }}#}
@@ -15,21 +32,13 @@
                                 {{ form_widget(form.username) }}
                             </div>
                         </div>
-
                         <div class="form-group">
-                            <label class="col-md-4 control-label" for="username">{{ form_label(form.password) }}</label>
+                            <label class="col-md-4 control-label" for="username">{{ form_label(form.email) }}</label>
                             <div class="col-md-6">
-                                {{ form_widget(form.password) }}
+                                {{ form_widget(form.email) }}
                             </div>
                         </div>
-
-                        <div class="form-group">
-                            <label class="col-md-4 control-label" for="username">{{ form_label(form.password_confirmation) }}</label>
-                            <div class="col-md-6">
-                                {{ form_widget(form.password_confirmation) }}
-                            </div>
-                        </div>
-
+                            {{ form_widget(form.plainPassword) }}
                         <div>
                             <input type="submit" value="{{ 'Register'|trans({}, 'FOSUserBundle') }}" />
                         </div>
