login and register comit

--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -41,7 +41,7 @@ header > nav > .sign > li > a:hover{color: #06c8f3;}
 .form-group.form-remember label{font-weight: normal; margin-left:7px;}
 .form-group.form-submit{margin-top:3px;}
 .form-group label, .form-group input{float:left;}
-.form-group input[type=text], .form-group input[type=password]{width:100%;}
+.form-group input[type=text], .form-group input[type=password], .form-group input[type=email]{width:100%;}
 
 footer{width:100%; height:50px; background:#34383b;}
 footer .container{color:#747c82; line-height:50px;}
