--- a/app/Resources/views/default/login.html.twig
+++ b/app/Resources/views/default/login.html.twig
@@ -6,7 +6,7 @@
 <div class="container">
     <div class="col-md-8 col-md-offset-2 account-panel">
         <div class="panel panel-default">
-            <div class="panel-heading">{{ 'Login to account'|trans({}, 'FOSUserBundle') }}</div>
+            <div class="panel-heading">{{ 'Login account'|trans({}, 'FOSUserBundle') }}</div>
             <div class="panel-body">
                 <form action="{{ path("fos_user_security_check") }}" method="post">
                     {% if error %}
