--- a/app/Resources/views/default/register.html.twig
+++ b/app/Resources/views/default/register.html.twig
@@ -1,22 +1,5 @@
 {% extends "account.html.twig" %}
-
-{% form_theme form _self %}
-
-{% block password_widget %}
-    {% set type = type|default('password') %}
-    {{ block('register_password') }}
-{% endblock %}
-
-{% block register_password %}
-    <div class="form-group">
-        <label class="col-md-4 control-label" for="username">{{ label }}</label>
-        <div class="col-md-6">
-            <input type="password" {{ block('widget_attributes') }} />
-        </div>
-    </div>
-    {#{{ form_row(form.plainPassword) }}#}
-{% endblock %}
-
+{% block title %} Registration {% endblock %}
 {% block body %}
     <div class="container">
         <div class="col-md-8 col-md-offset-2 account-panel">
@@ -24,21 +7,41 @@
                 <div class="panel-heading">{{ 'Registration'|trans({}, 'FOSUserBundle') }}</div>
                 <div class="panel-body">
                     <form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST" class="fos_user_registration_register">
-                        {#{{ form_widget(form) }}#}
+                        {% if not form.vars.valid %}
+                            <div class="alert alert-error">
+                                <div class="message">{{ form_errors(form) }}</div>
+                            </div>
+                        {% endif %}
+                        {{ form_row(form._token) }}
 
                         <div class="form-group">
-                            <label class="col-md-4 control-label" for="username">{{ form_label(form.username) }}</label>
+                            {{ form_label(form.username,'Username', {'label_attr': {'class': 'col-md-4'}}) }}
                             <div class="col-md-6">
-                                {{ form_widget(form.username) }}
+                                {{ form_widget(form.username, {'attr': {'class': 'form-control'}}) }}
+                                {{ form_errors(form.username) }}
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-md-4 control-label" for="username">{{ form_label(form.email) }}</label>
+                            {{ form_label(form.email,'E-Mail address', {'label_attr': {'class': 'col-md-4'}}) }}
                             <div class="col-md-6">
-                                {{ form_widget(form.email) }}
+                                {{ form_widget(form.email, {'attr': {'class': 'form-control'}}) }}
+                                {{ form_errors(form.email) }}
                             </div>
                         </div>
-                            {{ form_widget(form.plainPassword) }}
+                        <div class="form-group">
+                            {{ form_label(form.plainPassword.first,'Password', {'label_attr': {'class': 'col-md-4'}}) }}
+                            <div class="col-md-6">
+                                {{ form_widget(form.plainPassword.first, {'attr': {'class': 'form-control'}}) }}
+                                {{ form_errors(form.plainPassword.first) }}
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            {{ form_label(form.plainPassword.second,'Confirm Password', {'label_attr': {'class': 'col-md-4'}}) }}
+                            <div class="col-md-6">
+                                {{ form_widget(form.plainPassword.second, {'attr': {'class': 'form-control'}}) }}
+                                {{ form_errors(form.plainPassword.second) }}
+                            </div>
+                        </div>
                         <div>
                             <input type="submit" value="{{ 'Register'|trans({}, 'FOSUserBundle') }}" />
                         </div>
